--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "0.0.1",
   "private": true,
   "main": "dist/index.js",
-  "type": "module",
   "scripts": {
     "test": "echo hi there",
     "lint": "npx eslint --ext .js --ext .ts .",
     "format": "npx prettier -w src/",
     "build": "npx tsc -p ./tsconfig.json",
-    "start": "node ."
+    "start": "npm run build && node ."
   },
   "repository": {
     "type": "git",
@@ -21,6 +20,7 @@
   },
   "homepage": "https://github.com/NotEternal/twitterScripts#readme",
   "devDependencies": {
+    "@types/needle": "^2.5.3",
     "@types/node": "^18.11.9",
     "dotenv": "^16.0.3",
     "eslint": "^8.26.0",
@@ -28,5 +28,8 @@
     "eslint-plugin-import": "^2.26.0",
     "prettier": "^2.7.1",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "needle": "^3.1.0"
   }
 }
