--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,13 +10,12 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "noEmit": true,
     "removeComments": true,
     "isolatedModules": true,
     "skipLibCheck": true,
     "sourceMap": false,
     "target": "es6",
-    "module": "esnext",
+    "module": "CommonJS",
     "baseUrl": ".",
     "outDir": "./dist",
     "lib": [
